# memorax

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: Makefile  requirements.txt
docs/_static/: custom.css  style.css
docs/source/: conf.py  index.md
docs/source/api/: algorithms.rst  blocks.rst  buffers.rst  environments.rst  heads.rst  index.rst  layers.rst  loggers.rst  networks.rst  positional_embeddings.rst  sequence_models.rst  utils.rst
docs/source/getting_started/: concepts.md  installation.md  quickstart.md
docs/source/guides/: algorithms.md  networks.md  sequence_models.md  sharp_bits.md
examples/: ac_lambda_cartpole.py  ac_lambda_gymnasium.py  ac_lambda_minatar.py  ac_lambda_rtrl_minatar.py  dqn_ale.py  dqn_atari.py  dqn_gxm.py  gradient_ppo_craftax.py  mappo_jaxmarl.py  ppo_pobax.py  ppo_popjym.py  pqn_minatar.py  pqn_popgym_arcade.py  pqn_pufferlib.py  pqn_rl2_xminigrid.py  qrc_minatar.py  r2d2_navix.py  sac_brax.py  stream_ac_gymnasium.py  stream_ac_minatar.py  stream_ac_rtrl_minatar.py
memorax/: __init__.py
memorax/algorithms/: __init__.py  ac_causal_lambda.py  ac_lambda.py  algorithm.py  dqn.py  gradient_ppo.py  mappo.py  ppo.py  ppoc.py  pqn.py  psn.py  qrc.py  r2d2.py  sac.py  stream_ac.py
memorax/buffers/: episode_buffer.py  prioritised_episode_buffer.py
memorax/environments/: __init__.py  atari.py  brax.py  craftax.py  environment.py  grimax.py  gxm.py  gymnasium.py  gymnax.py  jaxmarl.py  mujoco_playground.py  navix.py  pobax.py  popgym_arcade.py  popjym.py  pufferlib.py  xminigrid.py
memorax/environments/wrappers/: __init__.py  bsuite.py  clip_action.py  delayed_observation.py  flickering_observation.py  mask_observation.py  multi_agent_record_episode_statistics.py  noisy_observation.py  normalize_observation.py  normalize_reward.py  periodic_observation.py  record_episode_statistics.py  scale_reward.py  sticky_action.py
memorax/kernels/: __init__.py
memorax/loggers/: checkpoint.py  dashboard.py  file.py  logger.py  tensorboard.py  wandb.py
memorax/networks/: __init__.py  embedding.py  feature_extractor.py  heads.py  hippo.py  identity.py  network.py  vit.py
memorax/networks/blocks/: __init__.py  base.py  ffn.py  moe.py  normalization.py  residual.py  router.py  segment_recurrence.py  stack.py
memorax/networks/initializers/: __init__.py  hippo.py  inverse_softplus.py  kaiming.py  linspace.py  log_step.py  log_uniform.py  powerlaw.py  small.py  sparse.py  uniform.py  wang.py  xavier.py
memorax/networks/layers/: __init__.py  block_diagonal_dense.py  causal_conv1d.py  flatten.py  multi_head_layer_norm.py
memorax/networks/positional_embeddings/: base.py  wpe.py
memorax/networks/sequence_models/: ffm.py  (+18 more)
memorax/utils/: __init__.py  axes.py  decorators.py  timestep.py  transition.py  utils.py  wrappers.py
